--- a/Guia.ipynb
+++ b/Guia.ipynb
@@ -2,12 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "57cf8e3a-f691-4e11-8690-55d87e2083bc",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "3a8190c9-dbd6-4a16-9e22-f11e985b8682",
    "metadata": {},
    "source": [
@@ -41,19 +35,23 @@
     "## 2. Disponibilidade de dados\n",
     "\n",
     "### 2.1. Dataset 1 – Socioeconômico (`tabela_total_final.csv`)\n",
-    "- **Bairro:** Nome do bairro de Belém.\n",
-    "- **area_km2:** Area do bairro\n",
-    "- **Habitações:** Número total de habitações no bairro.  \n",
-    "- **Moradores:** Número total de moradores no bairro.  \n",
-    "- **Média:** Média de moradores por habitação (`Moradores ÷ Habitações`).  \n",
-    "- **N:** Número de moradores com renda registrada.  \n",
-    "- **avg:** Renda média dos moradores do bairro.  \n",
-    "- **mdn:** Mediana da renda dos moradores do bairro.  \n",
-    "- **T.A.:** Taxa de alfabetização\n",
-    "- **IDH-R:** — IDH de Renda\n",
-    "- **IDH-L:** — IDH de Longevidade\n",
-    "- **IDH-E:** — IDH de Educação\n",
-    "- **IDH:** Índice de Desenvolvimento Humano Total\n",
+    "- `Bairro:` Nome do bairro de Belém.\n",
+    "- `area_km2` Aréa do bairro  \n",
+    "- `Hab:` Número total de habitações no bairro.  \n",
+    "- `Mor:` Número total de moradores no bairro.  \n",
+    "- `Mor/Hab:` Média de moradores por habitação (`Moradores ÷ Habitações`).  \n",
+    "- `N_ren:` Número de moradores com renda registrada.  \n",
+    "- `ren_avg:`Renda média dos moradores do bairro.  \n",
+    "- `ren_mdn` Mediana da renda dos moradores do bairro\n",
+    "- `T.A.` Taxa de alfabetização\n",
+    "- `IDH-R` Índice de desenvolvimento humano Renda\n",
+    "- `IDH-L` Índice de desenvolvimento humano Longevidade\n",
+    "- `IDH-E` Índice de desenvolvimento humano Educação\n",
+    "- `IDH` Índice de desenvolvimento humano\n",
+    "- `QTI` Quantidade de Depósitos Irregulares\n",
+    "- `CRA` Mediana da renda dos moradores do bairro\n",
+    "- `PPR` Percentual Populacao_rendimento\n",
+    "- `DIEs` Quantidade de Depósitos Irregulares estimado\n",
     "\n",
     "### 2.2. Dataset 2 – Setores de coleta (`shape_coleta.gpkg`)\n",
     "- **Setor (número):** Identificação do setor de coleta.  \n",
@@ -149,41 +147,79 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[Dataset 1: Socioeconômico - tabela_total_final.csv]   \n",
-    "           | \n",
-    "           v\n",
-    "[Preparação de Dados]\n",
-    "  - Limpeza e padronização de nomes de bairros e colunas\n",
-    "  - Verificação de consistência\n",
+    "[DATASETS FINAIS DISPONÍVEIS]\n",
+    "  ├── [Dataset 1: Socioeconômico + DIEs] - tabela_total_com_DIEs.csv\n",
+    "  ├── [Dataset 2: Geometria dos Bairros] - shape_bairros.gpkg  \n",
+    "  ├── [Dataset 3: Setores de Coleta] - shape_coleta.gpkg\n",
+    "  ├── [Dataset 4: Pontos de Descartes] - Pontos_descartes_ML.gpkg\n",
+    "  └── [Dataset 5: Frequência de Coleta] - Bairros_Ncoleta.csv\n",
+    "\n",
     "           |\n",
     "           v\n",
-    "[Criação de Indicadores]\n",
-    "  - Densidade populacional (Moradores / área)        <- tabela_total_final.csv + shape_bairros.gpkg\n",
-    "  - Renda média e mediana normalizada                <- tabela_total_final.csv\n",
-    "  - Frequência de coleta relativa                    <- shape_coleta.gpkg\n",
-    "  - Índice de descartes (descartes / população ou área) <- shape_bairros.gpkg + Dataset 5 (descartes sintéticos)\n",
+    "[PREPARAÇÃO E INTEGRAÇÃO DE DADOS] ✅ CONCLUÍDO\n",
+    "  - Limpeza e padronização de nomes de bairros\n",
+    "  - Merge das tabelas socioeconômicas (3033 + 3170)\n",
+    "  - Organização dos shapes e geometrias\n",
+    "  - Webscraping e estruturação dos dados de coleta\n",
+    "\n",
     "           |\n",
     "           v\n",
-    "[Normalização dos Indicadores]  <- todos os indicadores anteriores (0–1)\n",
+    "[CRIAÇÃO DE INDICADORES DE VULNERABILIDADE] ✅ PARCIALMENTE CONCLUÍDO\n",
+    "  ├── Densidade populacional (Mor / area_km2)\n",
+    "  ├── Indicadores de renda (ren_avg, ren_mdn, CRA, PPR)\n",
+    "  ├── Frequência de coleta relativa (dias / 7)\n",
+    "  ├── Índice de descartes (QTI, DIEs / população)\n",
+    "  ├── Indicadores de desenvolvimento (IDH, IDH-R, IDH-L, IDH-E)\n",
+    "  └── Taxa de alfabetização (T.A.)\n",
+    "\n",
     "           |\n",
     "           v\n",
-    "[Construção do Índice Composto de Vulnerabilidade]\n",
-    "  - Combinação ponderada dos indicadores\n",
+    "[ANÁLISE ESTATÍSTICA E CORRELAÇÕES] ✅ CONCLUÍDO\n",
+    "  - Correlação renda vs. descartes (r = -0.4406)\n",
+    "  - Correlação IDH vs. descartes (r = -0.4399) \n",
+    "  - Correlação área vs. DIEs (r = 0.564)\n",
+    "  - Correlação população vs. QTI (r = 0.4847)\n",
+    "  - Correlação densidade vs. descartes (r = 0.420)\n",
+    "\n",
     "           |\n",
     "           v\n",
-    "[Visualização Geográfica]  \n",
-    "  - Mapas de calor / cor por bairro ou setor         <- shape_bairros.gpkg + shape_coleta.gpkg + Dataset 5\n",
-    "  - Sobreposição de setores de coleta                <- shape_coleta.gpkg\n",
+    "[CONSTRUÇÃO DO ÍNDICE COMPOSTO] ❌ PENDENTE\n",
+    "  - Normalização dos indicadores (escala 0-1)\n",
+    "  - Combinação ponderada:\n",
+    "    Vulnerabilidade = w1·densidade + w2·(1-renda) + w3·(1-frequência_coleta) + w4·descartes\n",
+    "\n",
     "           |\n",
     "           v\n",
-    "[Análise e Interpretação]\n",
-    "  - Identificação de regiões críticas               <- resultado do índice + mapas\n",
-    "  - Avaliação de correlação com frequência de descarte\n",
+    "[VISUALIZAÇÃO GEOGRÁFICA E MAPAS] ✅ PARCIALMENTE CONCLUÍDO\n",
+    "  ├── Mapa de setores de coleta (Figura 1)\n",
+    "  ├── Mapa de renda mediana por bairro (Figura 2)\n",
+    "  ├── Mapas de correlação IDH vs. QTI (Figura 3)\n",
+    "  ├── Mapas de densidade vs. descartes (Figura 4)\n",
+    "  └── Mapa de frequência de coleta (Figura 5)\n",
+    "\n",
     "           |\n",
     "           v\n",
-    "[Relatórios e Recomendações]\n",
-    "  - Ações prioritárias para fiscalização            <- todos os resultados anteriores\n",
-    "  - Estratégias de coleta e intervenção"
+    "[IDENTIFICAÇÃO DE REGIÕES CRÍTICAS] ✅ CONCLUÍDO\n",
+    "  - Bairros com baixa renda (≤ R$605 mediana)\n",
+    "  - Bairros com baixo IDH \n",
+    "  - Áreas com grande extensão territorial\n",
+    "  - Regiões com alta densidade populacional\n",
+    "  - Setores com baixa frequência de coleta (≤3.5 dias/semana)\n",
+    "\n",
+    "           |\n",
+    "           v\n",
+    "[RELATÓRIOS E RECOMENDAÇÕES ESTRATÉGICAS] ✅ CONCLUÍDO\n",
+    "  ├── Ações prioritárias para fiscalização\n",
+    "  ├── Estratégias de coleta e intervenção\n",
+    "  ├── Plataforma interativa proposta\n",
+    "  └── Plano de implementação em fases\n",
+    "\n",
+    "           |\n",
+    "           v\n",
+    "[PRÓXIMAS ETAPAS: PLATAFORMA INTERATIVA] 🎯 FUTURO\n",
+    "  ├── Aplicativo móvel de geolocalização\n",
+    "  ├── Painel de gestão pública em tempo real\n",
+    "  └── Sistema de monitoramento participativo"
    ]
   }
  ],
