--- a/notebook/EDA.ipynb
+++ b/notebook/EDA.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "65410d6c-c239-4fe3-80bb-5995f1077db6",
    "metadata": {},
    "outputs": [
@@ -309,7 +309,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +320,7 @@
     "# ---------------------------\n",
     "path = \"/home/akel/PycharmProjects/Data_ambiental/data/process/\"\n",
     "\n",
-    "dfo = pd.read_csv(path + \"tabela_total_com_DIEs.csv\").rename(columns={'Quantidade de Depósitos Irregulares':'QTI','Depósitos Irregulares est.': 'DIEs',})\n",
+    "dfo = pd.read_csv(path + \"tabela_total_com_DIEs.csv\")\n",
     "\n",
     "df2 = pd.read_csv(path + \"Bairros_Ncoleta.csv\")\n",
     "\n",
