--- a/notebook/EDA.ipynb
+++ b/notebook/EDA.ipynb
@@ -911,10 +911,6 @@
    "id": "d7dae0eb-83df-4c7d-b906-b4c26fccc8d8",
    "metadata": {},
    "source": [
-    "## Resumo Executivo e Técnico: Descarte Irregular de Lixo em Belém\n",
-    "\n",
-    "O estudo socioeconômico e territorial dos bairros de Belém revela uma forte associação entre as condições de desenvolvimento humano e a ocorrência de Depósitos Irregulares de Entulho (DIEs). Os achados indicam que o descarte irregular de lixo está mais concentrado em áreas com menor desenvolvimento socioeconômico, sendo influenciado por fatores como o tamanho do bairro, o número de moradores e, principalmente, a renda e o Índice de Desenvolvimento Humano (IDH).\n",
-    "\n",
     "##  Principais Achados Técnicos\n",
     "\n",
     "### 1. Indicadores de Descarte Irregular (DIEs)\n",
@@ -960,55 +956,13 @@
     "A maior extensão territorial ($\\text{area\\_km2}$) amplifica o risco de descarte irregular devido a três fatores inter-relacionados:\n",
     "* **Áreas Não Fiscalizadas e de Baixa Cobertura:** A grande extensão territorial dos bairros acarreta um esforço logístico de fiscalização desproporcional, resultando na baixa frequência de monitoramento e na diminuição da percepção de risco pelos infratores, o que incentiva o descarte irregular em áreas isoladas.\n",
     "* Espaços Vazios e Terrenos Baldios: A maior extensão territorial aumenta a disponibilidade de terrenos baldios e espaços vazios, que são percebidos como locais neutros e fora da vista para o descarte clandestino, e frequentemente desencadeiam um efeito contágio que acelera a degradação e o abandono.\n",
-    "* Trechos Periféricos de Difícil Acesso: A infraestrutura viária deficiente (ruas não pavimentadas e acessos estreitos) em áreas periféricas de bairros grandes impede a circulação eficiente dos caminhões de coleta e fiscalização, criando um ambiente de alta vulnerabilidade que favorece o descarte clandestino de diversos tipos de resíduos.\n",
-    "\n",
-    "## Ações Estratégicas\n",
-    "\n",
-    "\n",
-    "### A. Fator Operacional: A Disparidade do Serviço\n",
-    "\n",
-    "A infraestrutura de coleta desigual nas periferias funciona como um gatilho direto para o descarte.\n",
-    "\n",
-    "**Síntese 1: Logística de Fiscalização Comprometida**\n",
-    "A grande extensão territorial dos bairros acarreta um esforço logístico de fiscalização desproporcional, resultando na baixa frequência de monitoramento e na diminuição da percepção de risco pelos infratores, o que incentiva o descarte irregular em áreas isoladas.\n",
-    "\n",
-    "**Síntese 2: Acúmulo de Lixo**\n",
-    "A maior extensão territorial aumenta a disponibilidade de terrenos baldios e espaços vazios, que são percebidos como locais neutros e fora da vista para o descarte clandestino, e frequentemente desencadeiam um efeito contágio que acelera a degradação e o abandono.\n",
-    "\n",
-    "**Síntese 3: Acesso Precário e Coleta Reduzida**\n",
-    "A infraestrutura viária deficiente (ruas não pavimentadas e acessos estreitos) em áreas periféricas de bairros grandes impede a circulação eficiente dos caminhões de coleta e fiscalização, criando um ambiente de alta vulnerabilidade que favorece o descarte clandestino de diversos tipos de resíduos.\n",
-    "\n",
-    "**Impacto Direto da Frequência**\n",
-    "A correlação negativa estatisticamente significativa entre frequência de coleta ($r = -0.2557$) e DIEs confirma que a redução da frequência de coleta (prevalente nas periferias com 3 dias/semana) contribui diretamente para o aumento de Descarte Irregular de Resíduos.\n",
-    "\n",
-    "\n",
-    "### B. Fatores Territoriais e Demográficos: A Amplificação do Risco\n",
-    "\n",
-    "O tamanho do bairro e sua densidade populacional amplificam a dificuldade de gestão.\n",
-    "\n",
-    "**Bairros Maiores e Populosos:**\n",
-    "A correlação forte com a área ($\\mathbf{r = 0.564}$) e a correlação moderada com o número de moradores ($r \\approx 0.485$ para QTI) mostram que o problema é exacerbado em grandes aglomerados.\n",
-    "\n",
-    "**Adensamento Residencial:**\n",
-    "O alto adensamento ($\\text{Mor/Hab}: r = 0.420$) sugere que a falta de espaço para armazenamento doméstico contribui para o descarte em vias públicas.\n",
-    "\n",
-    "### C. Fatores Socioeconômicos: A Raiz do Problema\n",
-    "\n",
-    "A estratégia deve priorizar a alocação de recursos em áreas de vulnerabilidade, onde o problema é mais agudo.\n",
-    "\n",
-    "**Prioridade na Renda e IDH Baixo:**\n",
-    "O descarte é significativamente maior em bairros com baixo IDH ($r \\approx -0.477$) e baixa renda ($r \\approx -0.443$).\n",
-    "\n",
-    "**Foco na Renda Mediana:**\n",
-    "A maioria dos bairros (80.28%) tem renda mediana ($\\text{ren\\_mdn}$) de R$ 605,00 ou menos, indicando que a grande massa do problema está concentrada em bairros de baixa renda que carecem de infraestrutura de suporte.\n",
-    "\n",
-    "\n"
+    "* Trechos Periféricos de Difícil Acesso: A infraestrutura viária deficiente (ruas não pavimentadas e acessos estreitos) em áreas periféricas de bairros grandes impede a circulação eficiente dos caminhões de coleta e fiscalização, criando um ambiente de alta vulnerabilidade que favorece o descarte clandestino de diversos tipos de resíduos.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f64dbe1-c81b-4b5d-ba5d-a4a84e75a252",
+   "id": "91787d80-781f-48cb-827f-09ee4007e15f",
    "metadata": {},
    "outputs": [],
    "source": []
