--- a/notebook/preprocessamento_Bairros_IBGE.ipynb
+++ b/notebook/preprocessamento_Bairros_IBGE.ipynb
@@ -5,23 +5,20 @@
    "id": "f2620160-a17e-4e39-88f2-8772841dae06",
    "metadata": {},
    "source": [
-    "# Leitura inicial - dados IBGE\n",
-    "## objetivo: \n",
-    "Padronizar, limpar e organizar os dados de bairros de Belém-PA a partir de múltiplos arquivos CSV\n",
+    "## Resumo Descritivo do Código\n",
     "\n",
-    "### Resumo Descritivo do Código\n",
-    "\n",
+    "Padronizar, limpar e organizar os dados de bairros de Belém-PA a partir de múltiplos arquivos CSV.\\\n",
     "O código realiza a leitura de múltiplos arquivos CSV contendo dados de bairros de Belém-PA, tanto do conjunto `tabela3033` quanto do `tabela3170` e salva `tabela_total_final.csv`* com as principais features.\n",
     "\n",
+    "---\n",
     "\n",
-    "\n",
-    "#### 1. Limpeza dos nomes de bairros\n",
+    "**1. Limpeza dos nomes de bairros**\n",
     "- Remove o sufixo `- Belém (PA)` das colunas `Bairro` em todos os DataFrames, garantindo uniformidade.\n",
     "\n",
-    "#### 2. Verificação de consistência\n",
+    "**2. Verificação de consistência**\n",
     "- Compara as listas de bairros entre diferentes DataFrames para identificar discrepâncias ou bairros ausentes.\n",
     "\n",
-    "#### 3. Salvamento seguro dos arquivos\n",
+    "**3. Salvamento seguro dos arquivos**\n",
     "- Cria uma função `salvar_csv` que grava os DataFrames em arquivos CSV no diretório de processamento.\n",
     "- Evita sobrescrever arquivos já existentes e informa o status do salvamento.\n",
     "\n",
