--- a/notebook/Mapa_Setores_coleta_Folium.ipynb
+++ b/notebook/Mapa_Setores_coleta_Folium.ipynb
@@ -32,10 +32,7 @@
     "import folium\n",
     "from folium.features import GeoJson, GeoJsonTooltip\n",
     "\n",
-    "import warnings\n",
-    "warnings.filterwarnings(\n",
-    "    \"ignore\",\n",
-    "    message=\".*choropleth_mapbox.*deprecated.*\")\n"
+    "import warnings"
    ]
   },
   {
@@ -7849,14 +7846,6 @@
     "\n",
     "mapa_coleta"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "05c4ef28-e729-4965-8fff-6ba459b430fa",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
