update figures html

--- a/notebook/Mapa_Setores_coleta_Folium.ipynb
+++ b/notebook/Mapa_Setores_coleta_Folium.ipynb
@@ -208,6 +208,8 @@
     "output_path = '/home/akel/PycharmProjects/Data_ambiental/docs'  # Ajuste conforme necessário\n",
     "html_filename = 'mapa_setores_coleta.html'\n",
     "full_path = os.path.join(output_path, html_filename)\n",
+    "# Salvar o mapa\n",
+    "mapa_coleta.save(full_path)\n",
     "print(\"Agora você pode fazer upload deste arquivo HTML para o GitHub!\")\n"
    ]
   }
