update figures html

--- a/notebook/Mapa_Setores_coleta_Folium.ipynb
+++ b/notebook/Mapa_Setores_coleta_Folium.ipynb
@@ -69,7 +69,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Agora você pode fazer upload deste arquivo HTML para o GitHub!\n"
+      "Salvo em: /home/akel/PycharmProjects/Data_ambiental/docs\n"
      ]
     }
    ],
@@ -210,7 +210,7 @@
     "full_path = os.path.join(output_path, html_filename)\n",
     "# Salvar o mapa\n",
     "mapa_coleta.save(full_path)\n",
-    "print(\"Agora você pode fazer upload deste arquivo HTML para o GitHub!\")\n"
+    "print(\"Salvo em: \"+output_path)\n"
    ]
   }
  ],
